[project]
name = "juno-handler"
version = "1.0.0"
description = "The Juno Handler is an example of my ideal vLLM worker."
authors = [
    { name = "Dj Isaac", email = "contact@dejaydev.com" },
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "runpod>=1.8.1",
    "vllm>=0.11.2",
    # Speedups, hf-transfer is supposed to be in the base image but it's not - sorry.
    "hf-transfer>=0.1.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv]
package = false
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu128"

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
flashinfer-jit-cache = { index = "flashinfer" }
torch = { index = "torch" }
torchvision = { index = "torch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
